atualização do delete e put